name:                load
version:             0.1.0.0
homepage:            https://github.com/dbp/ccisphds
license:             ISC
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2018 Daniel Patterson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable load
  hs-source-dirs:      .
  main-is:             load.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , wreq
                     , lens
                     , tagsoup
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/dbp/ccisphds
